# CHPL-Litigation-Information-Extraction

./: .gitignore  AnalysisExamples.csv  AnalysisExamples.xlsx  GoalsExamples.csv  GoalsExamples.xlsx  GoalsMapping.csv  Issues.csv  IssuesMapping.csv  LegalIssuesExamples.csv  LegalIssuesExamples.xlsx  README.md  pyproject.toml  requirements.txt  summarize_cases.py  tracker_web_app.py  update_judge_data.py
oneill_tracker/: __init__.py  pipeline.py
